# ros_maps_to_pedsim

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: ros_map_simulator.launch  ros_maps_to_pedsim.launch
rviz/: ros_maps_to_pedsim.rviz
scripts/: ros_maps_to_pedsim.py
